# spark_sandbox

./: .gitignore  Dockerfile  Dockerfile_jupyter  Dockerfile_spark  LICENSE  README.md  docker-compose.yml  requirements.txt  spark-start.sh
code_monitor/: README.md  pyproject.toml
code_monitor/code_monitor/: instrument_code.py
docker/: entrypoint.sh
jupyter_notebooks/: cpu_utilization_testbed.ipynb  create_regression_training_data.ipynb  create_time_series_training_data.ipynb  create_training_data.ipynb  instrument_code.py  lightgbm_classification.ipynb  lightgbm_classification_full.html  lightgbm_classification_limited.html  lightgbm_training_data.ipynb  linear_combination.ipynb  logistic_reg_scoring.ipynb  one_hot_encoding_testbed.ipynb  one_hot_encoding_testbed_short.ipynb  spark_cluster.yaml  spark_data_science_sample.ipynb  spark_lightgbm.ipynb  spark_lightgbm_classification.ipynb  spark_lightgbm_classification_broadcast.ipynb  spark_lightgbm_regression.ipynb  spark_read_write_executor.ipynb
